--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.4.1",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "helmet": "^3.6.1",
     "jsonwebtoken": "^7.4.1",
     "mongoose": "^4.4.12",
     "mongoose-unique-validator": "^1.0.2",
